# django-bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
